[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/hud/HamburgerPanel.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/SpellsList.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/QuitButton.gd" type="Script" id=4]
[ext_resource path="res://ui/hud/HamburgerButton.gd" type="Script" id=5]
[ext_resource path="res://ui/hud/PanelContainer.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.265747
margin_top = -0.484589
margin_right = -0.265747
margin_bottom = -0.484619
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 217.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HamburgerContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 147.0
margin_bottom = 541.0
size_flags_horizontal = 0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HamburgerPanel" type="PanelContainer" parent="VBoxContainer/HamburgerContainer"]
margin_right = 109.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HamburgerList" type="VBoxContainer" parent="VBoxContainer/HamburgerContainer/HamburgerPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 102.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer/HamburgerContainer/HamburgerPanel/HamburgerList"]
margin_right = 95.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Quittar bruto"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HamburgerContainer"]
margin_left = 113.0
margin_right = 147.0
margin_bottom = 34.0
size_flags_vertical = 0

[node name="HamburgerButton" type="Button" parent="VBoxContainer/HamburgerContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 27.0
margin_bottom = 27.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = ">"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -37.5
margin_right = 37.5
margin_bottom = 34.0
size_flags_horizontal = 2
size_flags_vertical = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedSpell" type="Button" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 68.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Magia 0"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SpellPanel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -75.0
margin_bottom = 541.0
size_flags_vertical = 3

[node name="SpellsList" type="VBoxContainer" parent="SpellPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 68.0
margin_bottom = 51.0
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spell1" type="Button" parent="SpellPanel/SpellsList"]
margin_right = 61.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 2
toggle_mode = true
text = "Magia 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spell2" type="Button" parent="SpellPanel/SpellsList"]
margin_top = 24.0
margin_right = 61.0
margin_bottom = 44.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "Magia 2"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HamburgerContainer/HamburgerPanel/HamburgerList/QuitButton" to="VBoxContainer/HamburgerContainer/HamburgerPanel/HamburgerList/QuitButton" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HamburgerContainer/PanelContainer/HamburgerButton" to="VBoxContainer/HamburgerContainer/HamburgerPanel" method="_on_HamburgerButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HamburgerContainer/PanelContainer/HamburgerButton" to="VBoxContainer/HamburgerContainer/PanelContainer/HamburgerButton" method="_on_HamburgerButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HamburgerContainer/PanelContainer/HamburgerButton" to="VBoxContainer/HamburgerContainer/HamburgerPanel" method="_on_HamburgerButton_toggled"]
[connection signal="toggled" from="VBoxContainer/HamburgerContainer/PanelContainer/HamburgerButton" to="VBoxContainer/HamburgerContainer/PanelContainer/HamburgerButton" method="_on_HamburgerButton_toggled"]
[connection signal="pressed" from="PanelContainer/SelectedSpell" to="PanelContainer" method="_on_SelectedSpell_pressed"]
